--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
+annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -45,6 +45,7 @@ file.reference.curvesapi-1.08.jar-1=lib\\curvesapi-1.08.jar
 file.reference.javax.mail.jar-1=lib\\javax.mail.jar
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 file.reference.log4j-api-2.20.0.jar-1=lib\\log4j-api-2.20.0.jar
+file.reference.lombok.jar=lib\\lombok.jar
 file.reference.mssql-jdbc-12.4.2.jre11.jar-1=lib\\mssql-jdbc-12.4.2.jre11.jar
 file.reference.mssql-jdbc-12.6.1.jre11.jar-1=lib\\mssql-jdbc-12.6.1.jre11.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar-1=lib\\mssql-jdbc-7.2.2.jre8.jar
@@ -77,7 +78,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-5.2.4.jar-1}:\
     ${file.reference.poi-ooxml-lite-5.2.4.jar-1}:\
     ${file.reference.poi-scratchpad-5.2.4.jar-1}:\
-    ${file.reference.xmlbeans-5.1.1.jar-1}
+    ${file.reference.xmlbeans-5.1.1.jar-1}:\
+    ${file.reference.lombok.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
